# lbmCL

./: CMakeLists.txt  LICENSE  README.md  build.bat
src/: cl_util.cpp  cl_util.h  lbm.cl  main.cpp
src/gl_shader/: render.frag
